# New-New-Polymarket-Telegram

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
apex/: __init__.py  config.py  main.py
apex/core/: __init__.py  autopilot.py  crypto_state.py  engine.py  health.py  models.py  notify.py  performance_tracker.py  scheduler.py  state.py  trading_modes.py  user_features.py
apex/data/: __init__.py  consensus_builder.py  crypto_client.py  injury_feed.py  line_movement.py  news_monitor.py  odds_ingestor.py  score_feed.py  source_health.py  (+1 more)
scripts/: backtest.py  smoke.py  test_pipeline.py
tests/: conftest.py  test_auth.py  test_calibration.py  test_catalog_mapper.py  test_claude_analyzer.py  test_clv_tracker.py  test_consensus.py  test_cost_tracker.py  test_crypto_models.py  test_crypto_state.py  test_db.py  test_db_health.py  test_decision_engine.py  test_discovery.py  test_discovery_pagination.py  test_dry_run_exchange.py  test_elo.py  test_ensemble.py  test_event_mapper.py  test_fair_value_strategy.py  test_fill_tracker.py  test_forecaster.py  test_injury_adjuster.py  test_line_movement.py  test_market_implied.py  test_math_utils.py  test_news_monitor.py  test_news_shock_strategy.py  test_notifier.py  test_odds_ingestor.py  test_odds_retry.py  test_order_manager.py  test_orderbook.py  test_parsing.py  test_poisson.py  test_position_sizer.py  test_power_ratings.py  test_resolution_monitor.py  test_risk.py  test_scorer.py  (+12 more)
(+83 files in other folders)
